# Collections

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: tests.yml
program/: Cargo.toml
program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  processor.rs  utils.rs
program/src/processor/: add_authority.rs  add_member.rs  add_member_of.rs  add_members.rs  arrange_member.rs  create_collection.rs  freeze.rs  freeze_collection.rs  remove_authority.rs  remove_member.rs
programs/collections/: Cargo.toml
programs/collections/src/: contexts.rs  errors.rs  lib.rs  state.rs
tests/: collections.ts
