[package]
name = "collections"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
solana-program = "1.6.12"
solana-validator = { version = "1.6.12", optional = true }
borsh = "0.9.1"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
bitflags = "1.3.2"

[features]
test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.12"
solana-sdk = "1.6.12"

[lib]
crate-type = ["cdylib", "lib"]
